--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate" : "npx drizzle-kit generate",
-    "db:migrate" : "npx drizzle-kit migrate",
-    "db:seed" : "tsx ./src/app/db/seed.ts"
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate",
+    "db:seed": "tsx ./src/app/db/seed.ts"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "drizzle-zod": "^0.7.1",
