--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "drizzle-zod": "^0.7.1",
+    "jose": "^6.0.10",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
